Fix layout problem

--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,6 +1,5 @@
 .Projects{
     margin: 10vh;
-    height: 100vh;
 }
 
 .Project{
@@ -9,6 +8,7 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 5%;
+    height: 50vh;
 }
 
 @media (max-width: 600px){
